[gd_scene load_steps=4 format=3 uid="uid://b1t3bmgx5ktiv"]

[ext_resource type="Script" path="res://script/buildings/entrance.gd" id="1_lau8s"]
[ext_resource type="PackedScene" uid="uid://rcnw5yq0be83" path="res://models/building/bunker_entrance.gltf" id="2_cab0p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pmhk6"]
size = Vector3(3, 4, 2)

[node name="bunker_entrance" type="Node3D"]
script = ExtResource("1_lau8s")
door_front_l = NodePath("bunker_entrance/door_front_l")
door_front_r = NodePath("bunker_entrance/door_front_r")
area_front_in = NodePath("area_front_in")
area_front_out = NodePath("area_front_out")
door_back_l = NodePath("bunker_entrance/door_back_l")
door_back_r = NodePath("bunker_entrance/door_back_r")
area_back_in = NodePath("area_back_in")
area_back_out = NodePath("area_back_out")

[node name="bunker_entrance" parent="." instance=ExtResource("2_cab0p")]

[node name="area_front_out" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="col" type="CollisionShape3D" parent="area_front_out"]
shape = SubResource("BoxShape3D_pmhk6")

[node name="area_front_in" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="col" type="CollisionShape3D" parent="area_front_in"]
shape = SubResource("BoxShape3D_pmhk6")

[node name="area_back_in" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8)

[node name="col" type="CollisionShape3D" parent="area_back_in"]
shape = SubResource("BoxShape3D_pmhk6")

[node name="area_back_out" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="col" type="CollisionShape3D" parent="area_back_out"]
shape = SubResource("BoxShape3D_pmhk6")

[editable path="bunker_entrance"]
